--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -3,17 +3,16 @@
 {% block content %}
 
 <h2>{{episode.location}}</h2>
-<h2>{{episode.name}}</h2>
+<h2>Title: {{episode.name}}</h2>
+<h2>Author(s): {{episode.authors}}</h2>
 <table border=1px>
 <tr><td>Date</td><td>{{episode.start|date:"b D d"}}</td></tr>
 <tr><td>Start</td><td>{{episode.start}}</td><td>{{episode.start|date:"P"}}</td></tr>
 <tr><td>End</td><td>{{episode.end}}</td> <td>{{episode.end|date:"P"}}</td></tr>
 </table>
 
-</p>
-
 <table border=1px>
-<tr><th>Useful</th><th>Seq</th><th>filename</th><th>Start</th><th>End</th><th>S</th><th>E</th><th>duration h:m:s</th></tr>
+<tr><th></th><th>Seq</th><th>filename</th><th>Start</th><th>End</th><th>S</th><th>E</th><th>duration h:m:s</th></tr>
 {% for cl in cuts %}
 <tr>
 <td> {{ cl.trash|yesno:"Trash,,Unchecked" }} </td>
@@ -23,6 +22,13 @@
 <td>{{cl.raw_file.end}}</td>
 <td> {{cl.raw_file.start|date:"P"}} </td> <td> {{cl.raw_file.end|date:"P"}}</td>
 <td> {{cl.raw_file.durationhms}} </td> 
+</tr>
+<tr>
+<td><a href="/site_media/{{episode.location.show.client.slug}}/{{episode.location.show.slug}}/dv/{{cl.raw_file.start|date:"Y-m-d"}}/{{episode.location.slug}}/{{cl.raw_file.basename}}.jpg">
+<img src="/site_media/{{episode.location.show.client.slug}}/{{episode.location.show.slug}}/dv/{{cl.raw_file.start|date:"Y-m-d"}}/{{episode.location.slug}}/{{cl.raw_file.basename}}.jpg" width=200> </a>
+</td>
+<td>{{cl.raw_file.ocrtext}}</td>
+<td><video src="/site_media/{{episode.location.show.client.slug}}/{{episode.location.show.slug}}/dv/{{cl.raw_file.start|date:"Y-m-d"}}/{{episode.location.slug}}/{{cl.raw_file.basename}}.ogg" controls ></video> </td>
 </tr>
 {% endfor %}
 </table>
