easier to read list of Episodes

--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -11,7 +11,7 @@
     <ul>
         {% for episode in episodes %}
             <li>
-            {{episode.start}} {{episode.end}}
+            {{episode.start|date:"b D d H:i"}} - {{episode.end|date:"H:i"}}
             <a href="E/{{episode.id}}/">{{ episode.name }}</a>
             </li>
         {% endfor %}
