replaced delete() with  applies field

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -1,5 +1,8 @@
-<html><body>
+<html>
+<head>{% block head %}{% endblock %}</head>
+<body>
 {% block content %}
 {% endblock %}
-<body><html>
+</body>
+</html>
 
