--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -30,6 +30,7 @@
 </table>
 
 <form action="" method="POST">
+{{ episode_form }}
 {{ clrfformset.management_form }}
 
 <table border=1>
@@ -83,6 +84,10 @@
     <tr>
     <td>{{cl.raw_file.ocrtext}}</td>
     {# <td> <video src="/site_media/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogg" controls='' ></video> </td> #}
+    <td> <video src="file:///media/disk/Video/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogg" controls ></video> </td> 
+    {#  <td> <video src="file:///home/juser/foo.ogg" ></video> </td> #}
+  <td> <img src="file:///home/juser/foo.png"> </td> #}
+
     </tr>
   </tbody>
   </table>
