consolidated output_format and src_dir into upload-formats, added support for uploading multiple formats

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -1,6 +1,11 @@
 <html>
 <head>{% block head %}{% endblock %}</head>
 <body>
+<p>
+<a href="..">up</a> (might work...)
+<a href="/main/">main</a> 
+<a href="/main/clients/">Clients</a>
+</p>
 {% block content %}
 {% endblock %}
 </body>
