--- a/dj/main/templates/client.html
+++ b/dj/main/templates/client.html
@@ -2,13 +2,14 @@
 {% extends "base.html" %}
 {% block content %}
 
+<a href="/admin/main/client/{{client.id}}">admin</a>
     <ul>
         {% for show in shows%}
             <li> {{show.sequence}} <a href="S/{{show.slug}}/">{{ show.name }}</a></li>
         {% endfor %}
     </ul>
 
-    <form action="" method="POST">
+    <form action="" method="POST">{% csrf_token %}
     <table border=1>
     {{ show_form }}
     </table>
