--- a/dj/main/templates/locations.html
+++ b/dj/main/templates/locations.html
@@ -8,7 +8,7 @@
             <li><a href="L/{{location.slug}}/">{{ location.name }}</a></li>
         {% endfor %}
     </ul>
-    <form action="" method="POST">
+    <form action="" method="POST">{% csrf_token %}
     <table border=1>
     {{ location_form }}
     </table>
