--- a/dj/main/templates/meeting_announcement.html
+++ b/dj/main/templates/meeting_announcement.html
@@ -8,6 +8,8 @@
 
 Come join us for our best meeting ever!
 
+{{episodes.0.start|date:"l F j, Y fA"}}
+
 Topics
 ------
 {% for episode in episodes %}
