admin for cutlist

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -68,6 +68,7 @@
          {{ clrfform.split.label_tag }}{{ clrfform.split }}</td>
       </tr>
       <tr> <td>Comments:</td> <td>{{clrfform.rf_comment}}</td> <td>{{clrfform.cl_comment}}</td> </tr>
+      <tr> <td></td> <td></td> <td><a href="/admin/main/cut_list/{{cl.id}}">admin</a></td> </tr>
 
     </tbody>
     </table>
