--- a/dj/main/templates/locations.html
+++ b/dj/main/templates/locations.html
@@ -2,6 +2,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<h2>Locations:</h2>
     <ul>
         <li><a href="E/">All</a></li>
         {% for location in locations %}
