--- a/dj/main/templates/locations.html
+++ b/dj/main/templates/locations.html
@@ -3,10 +3,10 @@
 {% block content %}
 
 <h2>Locations:</h2>
-    <ul>
-        <li><a href="E/">All</a></li>
+    <table class=tpick>
+        <tr class=row2><td><a href="E/">All</a></td></tr>
         {% for location in locations %}
-            <li><a href="L/{{location.slug}}/">{{ location.name }}</a></li>
+            <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}><td><a href="L/{{location.slug}}/">{{ location.name }}</a></td></tr>
         {% endfor %}
     </ul>
     <form action="" method="POST">{% csrf_token %}
