--- a/dj/main/templates/main.html
+++ b/dj/main/templates/main.html
@@ -1,7 +1,7 @@
 {# main.html #}
 {% extends "base.html" %}
 {% block content %}
-<ul>
-<li> <a href="clients">Clients</a>
-</ol>
+<table class=tpick>
+<tr class=row1><td> <a href="clients">Clients</a> </td></tr>
+</table>
 {% endblock %}
