--- a/dj/main/templates/clients.html
+++ b/dj/main/templates/clients.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h2>Clients</h2>
-    <table>
+    <table class=tpick>
         {% for client in clients %}
             <tr class="row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}" > <td> {{client.sequence}} </td><td><a href="/main/C/{{client.slug}}/">{{ client.name }}</a></td></tr>
         {% endfor %}
