--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -30,7 +30,7 @@
 </table>
 
 <form action="" method="POST">{% csrf_token %}
-{{ episode_form }}  2=read to encode, 3=ready to post
+{{ episode_form }}  2=ready to encode, 3=ready to post
 {{ clrfformset.management_form }}
 
 <table border=1>
