filenameify episode slug

--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -6,6 +6,8 @@
 
 <script type="text/javascript" src="/my_admin/jsi18n/"></script>
 <script type="text/javascript" src="/media/js/core.js"></script>
+<script type="text/javascript" src="/static/js/jquery.js"></script>
+<script type="text/javascript" src="/static/js/myscript.js"></script>
 {{ episode_form.media }}
 {% endblock %}
 
@@ -51,6 +53,5 @@
      <input type="submit" value="Save" />
      </form>
     {% endif %}
-
 
 {% endblock %}
