--- a/dj/main/templates/main.html
+++ b/dj/main/templates/main.html
@@ -2,6 +2,6 @@
 {% extends "base.html" %}
 {% block content %}
 <table class=tpick>
-<tr class=row1><td> <a href="clients">Clients</a> </td></tr>
+<tr class=row1><td> <a href="{% url clients %}">Clients</a> </td></tr>
 </table>
 {% endblock %}
