--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -4,10 +4,8 @@
 
 <script type="text/javascript" src="{{MEDIA_URL}}/js/jquery.js"></script>
 
-{% if not user.is_authenticated %}
 <script type="text/javascript" src="{{MEDIA_URL}}/js/login_form.js"></script>
 <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/css/login_form.css" />
-{% endif %}
 
 </head>
 <link rel="stylesheet" type="text/css" href="/media/css/base.css" />
@@ -15,16 +13,11 @@
 <body>
 <p>
 
-{% if user.is_authenticated %}
-  {# this is kinda repeated in the js when the user logs in #}
-  Hi {{user}}
-  {# this does not show up until a page reload - not very ajaxy. #}
-  <a href="/admin/logout/?next=/main/">logout</a> 
-{% else %}
-  {% include "accounts/login_form.html" %}
-{% endif %}
+{% include "accounts/login_form.html" %}
 
 <p>
+<a href="/admin/">admin</a> 
+<a href="/databrowse/">databrowse</a> 
 <a href="/main/">main</a> 
 <a href="/main/clients/">Clients</a>
 </p>
