--- a/dj/main/templates/client.html
+++ b/dj/main/templates/client.html
@@ -9,11 +9,14 @@
         {% endfor %}
     </table>
 
+
+    <div id=logged_in>
     <form action="" method="POST">{% csrf_token %}
     <table border=1>
     {{ show_form }}
     </table>
     <input type="submit" value="Save" />
     </form>
+    </div>
 
 {% endblock %}
