--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -46,12 +46,15 @@
     </table>
 
     {% if episode_form %}
+        <div id=logged_in>
+
      <form action="" method="POST">{% csrf_token %}
      <table border=1>
      {{ episode_form }}
      </table>
      <input type="submit" value="Save" />
      </form>
+     </div>
     {% endif %}
 
 {% endblock %}
